add photo and some details

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <aside class="card hero__card" aria-label="Carte profil">
           <div class="avatar" aria-hidden="true">
-            <span class="avatar__initials">MK</span>
+            <img class="avatar__photo" src="assets/photo.png" alt="Photo de Moussa Koné" loading="lazy" decoding="async" />
           </div>
           <div class="card__body">
             <h2 class="card__title">Moussa Koné</h2>
@@ -92,7 +92,7 @@
 
       <div class="container stats" aria-label="Points forts">
         <div class="stat">
-          <div class="stat__value">4+</div>
+          <div class="stat__value">5+</div>
           <div class="stat__label">années en Java/Angular</div>
         </div>
         <div class="stat">
